[gd_scene load_steps=28 format=4 uid="uid://8outq1w00o8h"]

[ext_resource type="AudioStream" uid="uid://s8osqlg8syuv" path="res://Audio/Songs/Throwing Fire.ogg" id="1_6fg3j"]
[ext_resource type="Script" uid="uid://bef0qoda5gboa" path="res://Scripts/screen_origin.gd" id="1_6lumq"]
[ext_resource type="Script" uid="uid://jh3kt60t4055" path="res://Scripts/bpm.gd" id="1_32x38"]
[ext_resource type="Texture2D" uid="uid://bdlqaiftptdcl" path="res://Sprites/tile.png" id="1_i5eh5"]
[ext_resource type="Script" uid="uid://1rajiv8msiak" path="res://Scripts/player.gd" id="2_i5eh5"]
[ext_resource type="AudioStream" uid="uid://ccve63aqx63rl" path="res://Audio/Sfx/Metronome.wav" id="3_66v8m"]
[ext_resource type="Texture2D" uid="uid://v1rg82ej7hws" path="res://Sprites/playerGrey_walk1.png" id="3_u0wck"]
[ext_resource type="Texture2D" uid="uid://cbmrn5ikxlby2" path="res://Sprites/playerGrey_walk2.png" id="4_j3llj"]
[ext_resource type="Shader" uid="uid://bajf66a6uq2pc" path="res://Shaders/dodge.gdshader" id="5_chl2c"]
[ext_resource type="Shader" uid="uid://dbt0iij44el47" path="res://Shaders/warn.gdshader" id="6_fgcxn"]
[ext_resource type="AudioStream" uid="uid://3hdn2liepnp6" path="res://Audio/Sfx/Damage.wav" id="6_t67x2"]
[ext_resource type="Script" uid="uid://dtb0ceetf034y" path="res://Scripts/grid.gd" id="7_4jlx7"]
[ext_resource type="PackedScene" uid="uid://civokcy7p0t3b" path="res://Attacks/bert_bullet.tscn" id="7_6lumq"]
[ext_resource type="PackedScene" uid="uid://bm2lkqk6ekxd2" path="res://Enemies/bert.tscn" id="7_chl2c"]
[ext_resource type="Script" uid="uid://duark4allpx8b" path="res://Scripts/damage_sfx.gd" id="7_xtb7t"]
[ext_resource type="PackedScene" uid="uid://ci468u78q2cxa" path="res://Enemies/goob.tscn" id="8_wp1u0"]
[ext_resource type="Script" uid="uid://dnea26683yksi" path="res://Scripts/deck.gd" id="9_6fg3j"]
[ext_resource type="Texture2D" uid="uid://4776c2flooo8" path="res://Sprites/blank_tile.png" id="9_mdaqt"]
[ext_resource type="Script" uid="uid://bg3sv1kf40r45" path="res://Scripts/beat_tracker.gd" id="14_ul75j"]
[ext_resource type="PackedScene" uid="uid://c2dsdrq6dsegg" path="res://Level/crappy_beat_rect.tscn" id="15_4jlx7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2nifc"]
texture = ExtResource("1_i5eh5")
texture_region_size = Vector2i(18, 12)
0:0/size_in_atlas = Vector2i(10, 10)
0:0/0 = 0
0:10/size_in_atlas = Vector2i(10, 10)
0:10/0 = 0
10:10/size_in_atlas = Vector2i(10, 10)
10:10/0 = 0
10:0/size_in_atlas = Vector2i(10, 10)
10:0/0 = 0

[sub_resource type="TileSet" id="TileSet_wkftn"]
tile_size = Vector2i(190, 130)
sources/1 = SubResource("TileSetAtlasSource_2nifc")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_06k41"]
shader = ExtResource("6_fgcxn")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t67x2"]
texture = ExtResource("9_mdaqt")
texture_region_size = Vector2i(18, 12)
0:0/size_in_atlas = Vector2i(10, 10)
0:0/0 = 0
0:0/0/material = SubResource("ShaderMaterial_06k41")

[sub_resource type="TileSet" id="TileSet_xtb7t"]
tile_size = Vector2i(190, 130)
sources/0 = SubResource("TileSetAtlasSource_t67x2")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_chl2c"]
shader = ExtResource("5_chl2c")
shader_parameter/active = false

[sub_resource type="SpriteFrames" id="SpriteFrames_6lumq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_u0wck")
}, {
"duration": 1.0,
"texture": ExtResource("4_j3llj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="ScreenOrigin" type="Node2D"]
script = ExtResource("1_6lumq")
bert_scene = ExtResource("7_chl2c")

[node name="BPMTimer" type="Timer" parent="."]
script = ExtResource("1_32x38")

[node name="BGM" type="AudioStreamPlayer" parent="BPMTimer"]
stream = ExtResource("1_6fg3j")

[node name="Metronome" type="AudioStreamPlayer" parent="BPMTimer"]
stream = ExtResource("3_66v8m")
max_polyphony = 2

[node name="Damage" type="AudioStreamPlayer" parent="BPMTimer"]
stream = ExtResource("6_t67x2")
max_polyphony = 2
script = ExtResource("7_xtb7t")

[node name="CrappyBlackBackground" type="Polygon2D" parent="."]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(1.73481e-05, 912, 1608, 912, 1608, 2.61756e-07, 1.90735e-06, -3.8147e-06)
uv = PackedVector2Array(-80, 944, 1648, 952, 1648, -40, -112, 16)

[node name="BattleGrid" type="TileMapLayer" parent="."]
position = Vector2(308, 281)
scale = Vector2(0.8, 0.8)
skew = 0.602139
tile_map_data = PackedByteArray("AAACAAMAAQAAAAAAAAACAAIAAQAAAAAAAAACAAEAAQAAAAAAAAADAAEAAQAAAAAAAAADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAAAAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAABAAAAAQAAAAAAAAACAAAAAQAAAAAAAAADAAAAAQAAAAAAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAABAAMAAQAAAAAAAAAEAAMAAQAKAAAAAAAEAAIAAQAKAAAAAAAEAAEAAQAKAAAAAAAEAAAAAQAKAAAAAAAFAAAAAQAKAAAAAAAGAAAAAQAKAAAAAAAHAAAAAQAKAAAAAAAHAAEAAQAKAAAAAAAGAAEAAQAKAAAAAAAFAAEAAQAKAAAAAAAFAAIAAQAKAAAAAAAGAAIAAQAKAAAAAAAHAAIAAQAKAAAAAAAGAAMAAQAKAAAAAAAFAAMAAQAKAAAAAAAHAAMAAQAKAAAAAAD4//v/AQAAAAoAAAA=")
tile_set = SubResource("TileSet_wkftn")
script = ExtResource("7_4jlx7")

[node name="WarnGrid" type="TileMapLayer" parent="BattleGrid"]
scale = Vector2(1, 1)
tile_map_data = PackedByteArray("AAD4//v/AQAAAAoAAAA=")
tile_set = SubResource("TileSet_xtb7t")

[node name="Player" type="Area2D" parent="."]
position = Vector2(447, 410)
script = ExtResource("2_i5eh5")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="Player"]
material = SubResource("ShaderMaterial_chl2c")
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_6lumq")
offset = Vector2(0, -52.825)

[node name="Deck" type="Node" parent="Player"]
script = ExtResource("9_6fg3j")

[node name="Bert" parent="." instance=ExtResource("7_chl2c")]
position = Vector2(-149, -81)

[node name="BertBullet" parent="." instance=ExtResource("7_6lumq")]
position = Vector2(-146, -241)

[node name="Goob" parent="." instance=ExtResource("8_wp1u0")]
position = Vector2(-289, -69)

[node name="BeatTracker" type="Node2D" parent="."]
position = Vector2(800, 900)
script = ExtResource("14_ul75j")

[node name="CrappyTrackerBg" type="Polygon2D" parent="BeatTracker"]
scale = Vector2(1.5, 1.5)
color = Color(0.3, 0.3, 0.3, 1)
polygon = PackedVector2Array(-248, 0, 248, 0, 224, -40, 16, -40, 0, -56, -16, -40, -224, -40)
uv = PackedVector2Array(-296, 32, 192, 32, 144, -40, -32, -40, -56, -72, -88, -40, -256, -40)

[node name="CrappyBeatRect" parent="BeatTracker" instance=ExtResource("15_4jlx7")]
position = Vector2(-96, 128)

[connection signal="grid_update" from="." to="BattleGrid" method="_on_grid_update"]
[connection signal="timeout" from="BPMTimer" to="BPMTimer" method="_on_timeout"]
[connection signal="timeout" from="BPMTimer" to="BeatTracker" method="_on_bpm_tracker_timeout"]
[connection signal="timeout_no_move" from="BPMTimer" to="Player" method="_on_timeout_no_move"]
[connection signal="miss" from="Player" to="BPMTimer/Damage" method="_on_player_miss"]
[connection signal="move" from="Player" to="." method="_on_player_move"]
